--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 
 # Build output
 dist/
+build/
 
 # Local env files
 .env
@@ -13,14 +14,36 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Mac system files
+# OS generated files
 .DS_Store
+Thumbs.db
 
-# VSCode settings
+# VS Code settings
 .vscode/
 
-# Optional: OS generated files
-Thumbs.db
+# Mac system files
+*.DS_Store
+
+# Windows system files
+*.log
+*.tmp
+*.swp
+
+# IDE files
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Git
+.git/
+.gitignore
+
+# Misc
+coverage/
+*.local
 
 # Supabase hidden files
 .supabase/ 
