--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
+    "axios": "^1.9.0",
     "cropper": "^4.1.0",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
